Fix overflow issue

--- a/src/skin/frontend/rwd/default/integernet/solr/sass/topfilter.sass
+++ b/src/skin/frontend/rwd/default/integernet/solr/sass/topfilter.sass
@@ -131,6 +131,7 @@ $grid-gutter:     10px
     display: block
     width: 150%
     height: auto
+    overflow: auto
     max-height: 200px
     padding: 10px 0
     background-color: $c-white
